correct contrast errors

--- a/explore.css
+++ b/explore.css
@@ -2,7 +2,7 @@
   --primary-color: #0052A5;
   --purple: #6A0DAD;
   --green: #4D8C23;
-  --amber: #B37400;
+  --amber: #a36a00;
   --turquoise: #008B8B;
   --white: #ffffff;
   --light-gray: #f5f5f5;
@@ -324,7 +324,7 @@
 }
 
 .category-header {
-  background-color: #c28216;
+  background-color: #a36a00;
 }
 
 .category-header2 {
